added notes for server, routes, and router function

--- a/express.ipynb
+++ b/express.ipynb
@@ -4,7 +4,296 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Express\n"
+    "# Express\n",
+    "\n",
+    "Express is a powerful but flexible Javascript framework for creating web servers and APIs. It can be used for everything from simple static file servers to JSON APIs to full production servers."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Starting a Server\n",
+    "\n",
+    "Express is a Node module, so in order to use it, we will need to import it into our program file. To create a server, the imported express function must be invoked.\n",
+    "\n",
+    "The purpose of a server is to listen for requests, perform whatever action is required to satisfy the request, and then return a response. In order for our server to start responding, we have to tell the server where to listen for new requests by providing a port number argument to a method called app.listen(). The server will then listen on the specified port and respond to any requests that come into it.\n",
+    "\n",
+    "The second argument is a callback function that will be called once the server is running and ready to receive responses."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// Import the express library here\n",
+    "var express = require('express')\n",
+    "// Instantiate the app here\n",
+    "var app = express()\n",
+    "\n",
+    "var PORT = process.env.PORT || 4001;\n",
+    "\n",
+    "// Invoke the app's `.listen()` method below:\n",
+    "app.listen(PORT, () => {\n",
+    "  console.log(`The server is listening for requests on port ${PORT}`)\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Routing\n",
+    "\n",
+    "To tell our server how to deal with any given request, we register a series of routes. Routes define the control flow for requests based on the request’s path and HTTP verb. Routing refers to determining how an application responds to a client request to a particular endpoint, which is a URI (or path) and a specific HTTP request method (GET, POST, and so on).\n",
+    "\n",
+    "Each route can have one or more handler functions, which are executed when the route is matched.\n",
+    "\n",
+    "Route definition takes the following structure:\n",
+    "\n",
+    "```JavaScript\n",
+    "app.METHOD(PATH, HANDLER)\n",
+    "```\n",
+    "\n",
+    "Where:\n",
+    "\n",
+    "- **app** is an instance of express.\n",
+    "- **METHOD** is an HTTP request method, in lowercase.\n",
+    "- **PATH** is a path on the server.\n",
+    "- **HANDLER** is the function executed when the route is matched."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{ [EventEmitter: app]\n",
+       "  domain: undefined,\n",
+       "  _events: { mount: [Function: onmount] },\n",
+       "  _maxListeners: undefined,\n",
+       "  setMaxListeners: [Function: setMaxListeners],\n",
+       "  getMaxListeners: [Function: getMaxListeners],\n",
+       "  emit: [Function: emit],\n",
+       "  addListener: [Function: addListener],\n",
+       "  on: [Function: addListener],\n",
+       "  prependListener: [Function: prependListener],\n",
+       "  once: [Function: once],\n",
+       "  prependOnceListener: [Function: prependOnceListener],\n",
+       "  removeListener: [Function: removeListener],\n",
+       "  removeAllListeners: [Function: removeAllListeners],\n",
+       "  listeners: [Function: listeners],\n",
+       "  listenerCount: [Function: listenerCount],\n",
+       "  eventNames: [Function: eventNames],\n",
+       "  init: [Function: init],\n",
+       "  defaultConfiguration: [Function: defaultConfiguration],\n",
+       "  lazyrouter: [Function: lazyrouter],\n",
+       "  handle: [Function: handle],\n",
+       "  use: [Function: use],\n",
+       "  route: [Function: route],\n",
+       "  engine: [Function: engine],\n",
+       "  param: [Function: param],\n",
+       "  set: [Function: set],\n",
+       "  path: [Function: path],\n",
+       "  enabled: [Function: enabled],\n",
+       "  disabled: [Function: disabled],\n",
+       "  enable: [Function: enable],\n",
+       "  disable: [Function: disable],\n",
+       "  acl: [Function],\n",
+       "  bind: [Function],\n",
+       "  checkout: [Function],\n",
+       "  connect: [Function],\n",
+       "  copy: [Function],\n",
+       "  delete: [Function],\n",
+       "  get: [Function],\n",
+       "  head: [Function],\n",
+       "  link: [Function],\n",
+       "  lock: [Function],\n",
+       "  'm-search': [Function],\n",
+       "  merge: [Function],\n",
+       "  mkactivity: [Function],\n",
+       "  mkcalendar: [Function],\n",
+       "  mkcol: [Function],\n",
+       "  move: [Function],\n",
+       "  notify: [Function],\n",
+       "  options: [Function],\n",
+       "  patch: [Function],\n",
+       "  post: [Function],\n",
+       "  propfind: [Function],\n",
+       "  proppatch: [Function],\n",
+       "  purge: [Function],\n",
+       "  put: [Function],\n",
+       "  rebind: [Function],\n",
+       "  report: [Function],\n",
+       "  search: [Function],\n",
+       "  subscribe: [Function],\n",
+       "  trace: [Function],\n",
+       "  unbind: [Function],\n",
+       "  unlink: [Function],\n",
+       "  unlock: [Function],\n",
+       "  unsubscribe: [Function],\n",
+       "  all: [Function: all],\n",
+       "  del: [Function],\n",
+       "  render: [Function: render],\n",
+       "  listen: [Function: listen],\n",
+       "  request: IncomingMessage { app: [Circular] },\n",
+       "  response: ServerResponse { app: [Circular] },\n",
+       "  cache: {},\n",
+       "  engines: {},\n",
+       "  settings: \n",
+       "   { 'x-powered-by': true,\n",
+       "     etag: 'weak',\n",
+       "     'etag fn': [Function: generateETag],\n",
+       "     env: 'development',\n",
+       "     'query parser': 'extended',\n",
+       "     'query parser fn': [Function: parseExtendedQueryString],\n",
+       "     'subdomain offset': 2,\n",
+       "     'trust proxy': false,\n",
+       "     'trust proxy fn': [Function: trustNone],\n",
+       "     view: [Function: View],\n",
+       "     views: '/usr/app/views',\n",
+       "     'jsonp callback name': 'callback' },\n",
+       "  _eventsCount: 1,\n",
+       "  locals: \n",
+       "   { settings: \n",
+       "      { 'x-powered-by': true,\n",
+       "        etag: 'weak',\n",
+       "        'etag fn': [Function: generateETag],\n",
+       "        env: 'development',\n",
+       "        'query parser': 'extended',\n",
+       "        'query parser fn': [Function: parseExtendedQueryString],\n",
+       "        'subdomain offset': 2,\n",
+       "        'trust proxy': false,\n",
+       "        'trust proxy fn': [Function: trustNone],\n",
+       "        view: [Function: View],\n",
+       "        views: '/usr/app/views',\n",
+       "        'jsonp callback name': 'callback' } },\n",
+       "  mountpath: '/',\n",
+       "  _router: \n",
+       "   { [Function: router]\n",
+       "     params: {},\n",
+       "     _params: [],\n",
+       "     caseSensitive: false,\n",
+       "     mergeParams: undefined,\n",
+       "     strict: false,\n",
+       "     stack: [ [Object], [Object], [Object] ] } }"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Listening on port 4001\n"
+     ]
+    }
+   ],
+   "source": [
+    "var express = require('express');\n",
+    "var app = express();\n",
+    "\n",
+    "var PORT = process.env.PORT || 4001;\n",
+    "// Use static server to serve the Express Yourself Website\n",
+    "// app.use(express.static('public'));\n",
+    "\n",
+    "\n",
+    "app.listen(PORT, () => {\n",
+    "    console.log(`Listening on port ${PORT}`);\n",
+    "});\n",
+    "\n",
+    "// Open a call to `app.get()` below:\n",
+    "app.get('/expressions', (req, res, next) => {\n",
+    "  console.log(req)\n",
+    "  res.send(\"Hello World\")\n",
+    "})\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sending A Response\n",
+    "\n",
+    "HTTP follows a one request-one response cycle. Each client expects exactly one response per request, and each server should only send a single response back to the client per request."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// Import the express library here\n",
+    "var express = require('express')\n",
+    "// Instantiate the app here\n",
+    "var app = express()\n",
+    "\n",
+    "var PORT = process.env.PORT || 4002;\n",
+    "\n",
+    "app.listen(PORT, () => {\n",
+    "  console.log(`Listening on port ${PORT}`);\n",
+    "});\n",
+    "\n",
+    "var monsters = [\n",
+    "    { type: 'werewolf' }, \n",
+    "    { type: 'hydra' }, \n",
+    "    { type: 'chupacabra' }\n",
+    "  ];\n",
+    "\n",
+    "app.get('/monsters', (req, res, next) => {\n",
+    "    res.send(monsters);\n",
+    "  });\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Router\n",
+    "\n",
+    "Use the express.Router class to create modular, mountable route handlers. A Router instance is a complete middleware and routing system; for this reason, it is often referred to as a “mini-app”.\n",
+    "\n",
+    "The following example creates a router as a module, loads a middleware function in it, defines some routes, and mounts the router module on a path in the main app.\n",
+    "\n",
+    "Create a router file named birds.js in the app directory, with the following content:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "var express = require('express')\n",
+    "var router = express.Router()\n",
+    "\n",
+    "// middleware that is specific to this router\n",
+    "var timeLog = (req, res, next) => {\n",
+    "  console.log('Time: ', Date.now())\n",
+    "  next()\n",
+    "}\n",
+    "\n",
+    "router.use(timeLog)\n",
+    "\n",
+    "// define the home page route\n",
+    "router.get('/', (req, res) => {\n",
+    "  res.send('Birds home page')\n",
+    "})\n",
+    "// define the about route\n",
+    "router.get('/about', (req, res) => {\n",
+    "  res.send('About birds')\n",
+    "})\n",
+    "\n",
+    "module.exports = router"
    ]
   }
  ],
